finCompare/k8s/audit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
  namespace: fincompare
spec:
  selector:
    app: audit-service
  ports:
  - port: 8007
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-service
  namespace: fincompare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-service
  template:
    metadata:
      labels:
        app: audit-service
    spec:
      containers:
      - name: audit-service
        image: financial-system/audit-service:5.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
