finCompare/k8s/info-control.yaml
apiVersion: v1
kind: Service
metadata:
  name: info-control
  namespace: fincompare
spec:
  selector:
    app: info-control
  ports:
  - port: 8005
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-control
  namespace: fincompare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: info-control
  template:
    metadata:
      labels:
        app: info-control
    spec:
      containers:
      - name: info-control
        image: financial-system/info-control:5.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
