finCompare/k8s/ingestion-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-worker
  namespace: fincompare
spec:
  selector:
    app: ingestion-worker
  ports:
  - port: 8008
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-worker
  namespace: fincompare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-worker
  template:
    metadata:
      labels:
        app: ingestion-worker
    spec:
      containers:
      - name: ingestion-worker
        image: financial-system/ingestion-worker:5.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
