finCompare/k8s/journey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journey-service
  namespace: financial-system
spec:
  selector:
    app: journey-service
  ports:
  - port: 8004
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journey-service
  namespace: financial-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journey-service
  template:
    metadata:
      labels:
        app: journey-service
    spec:
      containers:
      - name: journey-service
        image: financial-system/journey-service:5.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
