finCompare/k8s/mode-control.yaml
apiVersion: v1
kind: Service
metadata:
  name: mode-control
  namespace: fincompare
spec:
  selector:
    app: mode-control
  ports:
  - port: 8006
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mode-control
  namespace: fincompare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mode-control
  template:
    metadata:
      labels:
        app: mode-control
    spec:
      containers:
      - name: mode-control
        image: financial-system/mode-control:5.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
