finCompare/k8s/pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: fincompare
spec:
  selector:
    app: pgadmin
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: fincompare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4
        ports:
        - containerPort: 80
