finCompare/k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: fincompare
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: fincompare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        command:
        - redis-server
        args:
        - --requirepass
        - redis123
        ports:
        - containerPort: 6379
