finCompare/k8s/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: fincompare
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Script-Name /pgadmin;
spec:
  rules:
  - http:
      paths:
      - path: /pgadmin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pgadmin-service
            port:
              number: 80
